tests/unit/commands/activity/snapshots/sara__commands__activity__render__tests__styled_snapshot_activity.snap
---
source: tests/unit/commands/activity/render.rs
expression: "crate::test_support::render_to_styled_string(90, 16, |f|\nrender_on(f, &data, today))"
---
┌ Activity — sara ───────────────────────────────────────────────────────────────────────┐
│Created: 120   Completed: 98   Completion rate: 82%   Current streak: 6d   Longest strea│
│                                                                                        │
│────────────────────────────────────────────────────────────────────────────────────────│
│    Dec           Jan                         Feb                         Mar           │
│                                                                                        │
│    ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│Mon ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│    ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│Wed ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│    ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│Fri ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██ ██                                                 │
│    Less ██ ██ ██ ██ ██ More    q/Esc to close                                          │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
--- styles ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
abbbbbbbbbbbbcccbbbbbbbbbbbbbcccbbbbbbbbbbbbbbbbbbbbcccbbbbbbbbbbbbbbbbbbcccbbbbbbbbbbbbba
acccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccca
adddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddda
acccceeeeeeeccccccceeeeeeeccccccccccccccccccccceeeeeeeccccccccccccccccccccceeeeeeeccccccca
acccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffggggggggggggggggggggggggcccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffhhhhhhhhhhhhhhhhhhhhhhhhcccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffffffffffffffffffffffffffcccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffiiiiiiiiiiiiiiiiiiiiiiiicccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffiiiiiiiiiiiiiiiiiiiiiiiicccccccccccccccccccccccccccccccccccccccccccccccca
addddffffffffffffjjjjjjjjjjjjjjjjjjjjjjjjcccccccccccccccccccccccccccccccccccccccccccccccca
addddkkkkkfffhhjjjjiijiijllllmmmmmmmmmmmmnnnnnncccccccccccccccccccccccccccccccccccccccccca
acccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccca
acccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccca
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a fg=Some(Cyan) bg=Some(Reset) mod=NONE
b fg=Some(White) bg=Some(Reset) mod=NONE
c fg=Some(Reset) bg=Some(Reset) mod=NONE
d fg=Some(DarkGray) bg=Some(Reset) mod=NONE
e fg=Some(Gray) bg=Some(Reset) mod=NONE
f fg=Some(Rgb(22, 27, 34)) bg=Some(Rgb(22, 27, 34)) mod=NONE
g fg=Some(Rgb(0, 109, 50)) bg=Some(Rgb(0, 109, 50)) mod=NONE
h fg=Some(Rgb(14, 68, 41)) bg=Some(Rgb(14, 68, 41)) mod=NONE
i fg=Some(Rgb(57, 211, 83)) bg=Some(Rgb(57, 211, 83)) mod=NONE
j fg=Some(Rgb(38, 166, 65)) bg=Some(Rgb(38, 166, 65)) mod=NONE
k fg=Some(DarkGray) bg=Some(Rgb(22, 27, 34)) mod=NONE
l fg=Some(DarkGray) bg=Some(Rgb(38, 166, 65)) mod=NONE
m fg=Some(DarkGray) bg=Some(Rgb(38, 166, 65)) mod=DIM
n fg=Some(DarkGray) bg=Some(Reset) mod=DIM
