tests/unit/commands/activity/snapshots/sara__commands__activity__render__tests__styled_snapshot_activity_drill_down.snap
---
source: tests/unit/commands/activity/render.rs
expression: "crate::test_support::render_to_styled_string(90, 20, |f| { render(f, &st) })"
---
 sara  ▸ activity                                                all projects · 6d streak
▌ Overview
  120 created  ·  98 completed  ·  81% done rate  ·  6d streak  ·  21d best

▌ Last 43 weeks
    May Jun     Jul     Aug       Sep     Oct     Nov       Dec     Jan     Feb     Mar
    · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ● ●
Mon · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ● ●
    · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ● ●
Wed · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
    · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ●
Fri · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ●
    · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● ● ● ● ● ● ● ●
    less · ● ● ● ● more

▌ Mon 16 Mar 2026  2 tasks touched
  ○    #9  Phase 6 projects and activity  sara
  ●    #8  Review form Phase 4  sara

h/l week  j/k day  ↵ tasks  Esc close  q quit
--- styles ---
aaaaaabbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccdddddddddddddddeeeeeeeeee
bbbbbbbbbbddcccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
ccfffdddddddddddddffdddddddddddddddfffdddddddddddddddffddddddddddddfffdddddccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbddccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggccc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchcicicicicicicicicic
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchcjcjcjcjcjcjcjcjckc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchclclclclclclclclclc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchcmcmcmcmcmcmcmcmccc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchcmcmcmcmcmcmcmcmccc
ddddhchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchchciciciciciciciciccc
dddddddddhhjjiimmmmddddccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbdddddddddddddddddcccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbbbdddddddnnnnnnnnnnnnnnnnnnnnnnnnnnnnnddddddcccccccccccccccccccccccccccccccccccccccccccc
eeeedddddddnnnnnnnnnnnnnnnnnnnddddddcccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
bbbdddddddbbbddddddbddddddddbbbddddddddbdddddccccccccccccccccccccccccccccccccccccccccccccc
--- legend ---
a fg=Some(Black) bg=Some(Cyan) mod=BOLD
b fg=Some(Cyan) bg=Some(Reset) mod=BOLD
c fg=Some(Reset) bg=Some(Reset) mod=NONE
d fg=Some(DarkGray) bg=Some(Reset) mod=NONE
e fg=Some(Green) bg=Some(Reset) mod=NONE
f fg=Some(White) bg=Some(Reset) mod=BOLD
g fg=Some(Gray) bg=Some(Reset) mod=NONE
h fg=Some(Rgb(22, 27, 34)) bg=Some(Reset) mod=NONE
i fg=Some(Rgb(38, 166, 65)) bg=Some(Reset) mod=NONE
j fg=Some(Rgb(0, 109, 50)) bg=Some(Reset) mod=NONE
k fg=Some(Rgb(0, 109, 50)) bg=Some(Blue) mod=BOLD
l fg=Some(Rgb(14, 68, 41)) bg=Some(Reset) mod=NONE
m fg=Some(Rgb(57, 211, 83)) bg=Some(Reset) mod=NONE
n fg=Some(White) bg=Some(Reset) mod=NONE
